update new post.

--- a/February/2017-02-14.md
+++ b/February/2017-02-14.md
@@ -1,15 +1,19 @@
-#February 12, 2017.
-##ROICE webshop
-[ROICE webshop](https://www.behance.net/gallery/48070467/ROICE-webshop)：
-I was influenced by this design and It's really attractive. key points are ...
-- Good color balance. In particular, Main color has such as green and black. There are several type of Green and Black.
-- Simple design.
-- Good atmosphere.
-- Shadow balance.  
-I seem that it's well-balanced of design totally. it includes like my favorite design but I think it's really well-balanced. I thought that It's not only depending with material design. If anything, it's like a flat design.
+#February 14, 2017.
+##tito: toolkit
+[titon: toolkit](http://titon.io/en)：  
+This is also CSS framework which can use lots of component or option. This CSS framework is using SASS, gulp and jQuery internally. I hate to use jQuery but So many developer (In particular, web-designer) use it. It make us feel comfortable to make app and design. I think that we've got to make an effort, also had better make it easy to implement. It might help you if use this one.  
 
-##AR Virtual Fitness Coach App
-[AR Virtual Fitness Coach App](https://www.behance.net/gallery/45859207/AR-Virtual-Fitness-Coach-App-AR-)：
-This is really cool design of gradation. In my case, It's quite difficult to adapt proper color of gradation if I make design which use gradation. However, This design is quite attractive. I was impressive to this gradation of design.  
-Nowadays, So many new project are getting adapting gradation. I often see like this design which use gradation recently.  
-Maybe, it might become key point of future of design.
+##subway
+[subway](https://github.com/mariuszostrowski/subway)：  
+This is bunch of icons and you can use it in your app or design. This is optimized for ...
+- Apple Watch Menu Icons
+- iOS (30px/@1x and 60px/@2x)
+- iOS 7/8 Style (30px/@1x, 60px/@2x, 90px/@3x, iOS 8 PDF)
+- Windows Phone (48px and 72px)
+- Windows 8 (40px)
+- BlackBerry 10 (96px, 81px, 71px and 61px)  
+There are so many type of platform. And it's really simple icons.  
+
+##edmundyu
+[edmundyu](http://www.edmundyu.com/)：  
+This is emundyu's portfolio. I was impressive when clicked menu button. It's good animation. I thought that it's using like a SPA internally. Design is quite simple and good responsive design.
