--- a/February/2017-02-14.md
+++ b/February/2017-02-14.md
@@ -1,5 +1,5 @@
 #February 14, 2017.
-##tito: toolkit
+##titon: toolkit
 [titon: toolkit](http://titon.io/en)：  
 This is also CSS framework which can use lots of component or option. This CSS framework is using SASS, gulp and jQuery internally. I hate to use jQuery but So many developer (In particular, web-designer) use it. It make us feel comfortable to make app and design. I think that we've got to make an effort, also had better make it easy to implement. It might help you if use this one.  
 
